[Style] title font size adjustment Keep h1 font size of schedule similar to agenda at width 768 ~ 1063px Fix the collapsing margin

--- a/src/assets/scss/news/schedule.scss
+++ b/src/assets/scss/news/schedule.scss
@@ -27,7 +27,7 @@
   h1 {
     font-size: 36pt;
     line-height: 1.45em;
-    margin: 15px 0;
+    padding: 15px 0;
   }
 
   h2 {
@@ -103,6 +103,10 @@
 @media screen and (max-width: 1023px) {
   #news-schedule {
     margin: 0 100px;
+
+    h1 {
+      font-size: 28pt;
+    }
 
     #presentation-example,
     #espresso-example {
